# DGSEM

./: .gitignore  AGENTS.md  CMakeLists.txt  GEMINI.md  README.md  basis.hpp  basis_detail.hpp  boundary_condition.hpp  container_fixed.hpp  data_container.hpp  global_def.hpp  indicator.hpp  initial_condition.hpp  jacobian.hpp  main.cpp  mesh.hpp  mkdocs.yml  nodes.txt  numerical_flux.hpp  solution.txt  solver.hpp  surface_flux.hpp  surface_integral.hpp  time_integrator.hpp  volume_flux.hpp
.github/workflows/: docs.yml
doc/: README.md  api_reference.md  architecture.md  build.md  cuda_notes.md  examples.md  extending_boundary_conditions.md  extending_equations.md  getting_started.md  solver_pipeline.md
doc/images/examples/: README.md
examples/: CMakeLists.txt
examples/Euler1D/: CMakeLists.txt
examples/Euler1D/shock_tube/: CMakeLists.txt  shock_tube.cpp
examples/Euler1D/shu_osher/: CMakeLists.txt  shu_osher.cpp
examples/Euler2D/: CMakeLists.txt
examples/Euler2D/astro_jet/: CMakeLists.txt  astro_jet.cpp
examples/Euler2D/blast_wave_hg/: CMakeLists.txt  blast_wave_hg.cpp
examples/Euler2D/double_mach_reflection/: CMakeLists.txt  double_mach_reflection_structured.cpp
examples/Euler2D/kelvin_helmholtz_hg/: CMakeLists.txt  kelvin_helmholtz_hg.cpp
examples/Euler2D/riemann2d/: CMakeLists.txt  riemann2d.cpp
examples/Euler3D/: CMakeLists.txt
examples/Euler3D/inviscid_tgv/: CMakeLists.txt  inviscid_tgv.cpp
examples/Euler3D/sedov_blast_wave/: CMakeLists.txt  sedov_blast_wave.cpp
examples/NavierStokes2D/: CMakeLists.txt
examples/NavierStokes2D/KHI/: CMakeLists.txt  viscous_khi.cpp
examples/NavierStokes2D/viscous_shock_tube/: CMakeLists.txt  viscous_shock_tube.cpp
examples/NavierStokes3D/: CMakeLists.txt
examples/NavierStokes3D/taylor_green_vortex/: CMakeLists.txt  taylor_green_vortex.cpp
examples/Scalar1D/: CMakeLists.txt
examples/Scalar1D/buckley_leverett/: CMakeLists.txt  buckley_leverett.cpp
examples/Scalar1D/inviscid_burgers/: CMakeLists.txt  inviscid_burgers.cpp
examples/Scalar1D/shock_capture/: CMakeLists.txt  shock_capture.cpp
src/: dgsem.hpp
src/analyzer/: analyzer.hpp  analyzer_functor.hpp  analyzer_wrapper.hpp  composite_analyzer.hpp  divergence_checker.hpp  volume_average_euler.hpp  volume_weighted_analyzer_functor.hpp
src/base/: base.hpp  container_fixed.hpp  global_def.hpp  mapping.hpp  math_utils.hpp  numerical_flux.hpp  numerical_flux_detail.hpp
src/boundary_condition/: bc_new.hpp  boundary_condition.hpp  boundary_condition_base.hpp  boundary_set.hpp  dirichlet_boundary.hpp  extrapolate_boundary.hpp  initial_condition_base.hpp  initial_functor.hpp  navier_stokes_wall_boundary.hpp  outflow_boundary.hpp  periodic_boundary.hpp  slip_wall_boundary.hpp
src/containers/: containers.hpp  data_container.hpp  solution_container.hpp
src/equations/: buckley_leverett1D.hpp  compressible_euler1D.hpp  compressible_euler2D.hpp  compressible_euler3D.hpp  compressible_navier_stokes2D.hpp  compressible_navier_stokes3D.hpp  equations.hpp  equations_base.hpp  inviscid_burgers1D.hpp  linear_scalar_advection1D.hpp
src/mesh/: mesh.hpp  structured_mesh.hpp
src/observer/: analysis_observer.hpp  analyzer_observer.hpp  observer.hpp  observer_base.cpp  observer_base.hpp  print_observer.cpp  print_observer.hpp  vtu_output_observer.hpp  vtu_output_observer_impl.cpp  vtu_output_observer_impl.hpp
src/polynomial_basis/: basis.hpp  basis_detail.hpp  polynomial_basis.hpp
src/solver/: solver.hpp  structured_problem.hpp  structured_solver.hpp
src/space_integral/: jacobian.hpp  parabolic_br1.hpp  parabolic_concepts.hpp  parabolic_gradient.hpp  parabolic_viscous.hpp  space_integral.hpp  surface_flux.hpp  surface_flux_functor.hpp  surface_integral.hpp  surface_integral_functor.hpp  volume_flux.hpp  volume_integral_functor.hpp
src/subcell_limiting/: indicator.hpp  subcell_limiting.hpp
src/time_integrator/: SSPRK3.hpp  integrator_base.hpp  time_integrator.hpp
src/utils/: boundary_helper.hpp  cell_iteration.hpp  io.hpp  kokkos_helper.hpp  local_dof.hpp  runtime.hpp  state_conversion.hpp  utils.hpp
